--- a/htdocs/styleContent.css
+++ b/htdocs/styleContent.css
@@ -77,33 +77,6 @@ body {
     text-align: justify;
 }
 
-@keyframes Kanimation {
-    0% {
-        top: 50px;
-        right: 40px;
-    }
-    50% {
-        top: 0px;
-        right: 0px;
-    }
-    100% {
-        top: 50px;
-        right: 40px;
-    }
-}
-
-.bigKDiv {
-    top: 50px;
-    right: 40px;
-    background-color: none;
-    position: relative;
-    animation-name: Kanimation;
-    animation-iteration-count: infinite;
-    animation-delay: 0s;
-    animation-timing-function: ease-in-out;
-    animation-duration: 15s;
-}
-
 @keyframes fadeDown {
     0% {
         opacity: 0;
@@ -176,10 +149,37 @@ body {
     width: 150px;
 }
 
+@keyframes Kanimation {
+    0% {
+        top: 50px;
+        right: 40px;
+    }
+    50% {
+        top: 0px;
+        right: 0px;
+    }
+    100% {
+        top: 50px;
+        right: 40px;
+    }
+}
+
+.bigKDiv {
+    top: 50px;
+    right: 40px;
+    background-color: none;
+    position: relative;
+    animation-name: Kanimation;
+    animation-iteration-count: infinite;
+    animation-delay: 0s;
+    animation-timing-function: ease-in-out;
+    animation-duration: 15s;
+}
+
 .bigK {
     --left-pos : -50px;
-    width: 1200px;
-    height: 1200px;
+    width: 100%;
+    height: 110%;
     filter: drop-shadow(5px 20px 15px rgba(0, 0, 0, 0.699));
 }
 
